luck/src/Outer/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> program                           (0)
	%start_typeParser -> type                          (1)
	program -> decls                                   (2)
	decls ->                                           (3)
	decls -> 'data' dataDecl decls                     (4)
	decls -> 'fun' funDecl decls                       (5)
	decls -> 'sig' sigDecl decls                       (6)
	sigDecl -> VARID '::' type                         (7)
	dataDecl -> type '=' constrs                       (8)
	constrs -> constr                                  (9)
	constrs -> constrs '|' constr                      (10)
	constr -> btype                                    (11)
	btype -> btype1                                    (12)
	btype1 -> btype1 atype                             (13)
	btype1 -> atype                                    (14)
	atype -> gtycon                                    (15)
	atype -> VARID                                     (16)
	atype -> '(' types ')'                             (17)
	atype -> '[' type ']'                              (18)
	atype -> '(' type ')'                              (19)
	gtycon -> CONID                                    (20)
	types -> types ',' type                            (21)
	types -> type ',' type                             (22)
	type -> btype '->' type                            (23)
	type -> btype                                      (24)
	funDecl -> VARID vars '=' exp                      (25)
	vars -> VARID                                      (26)
	vars -> VARID vars                                 (27)
	sexp -> INT                                        (28)
	sexp -> CONID                                      (29)
	sexp -> VARID                                      (30)
	sexp -> '()'                                       (31)
	sexp -> '(' exp ')'                                (32)
	sexp -> '(' ccexps ')'                             (33)
	sexp -> '[' exps ']'                               (34)
	exp -> sexp                                        (35)
	exp -> sexp sexps                                  (36)
	exp -> '+' exp                                     (37)
	exp -> '-' exp                                     (38)
	exp -> 'not' exp                                   (39)
	exp -> exp '+' exp                                 (40)
	exp -> exp '-' exp                                 (41)
	exp -> exp '*' exp                                 (42)
	exp -> exp '/' exp                                 (43)
	exp -> exp '&&' exp                                (44)
	exp -> exp '{' exp '}' '||' '{' exp '}' exp        (45)
	exp -> exp '||' exp                                (46)
	exp -> exp '==' exp                                (47)
	exp -> exp '/=' exp                                (48)
	exp -> exp '<' exp                                 (49)
	exp -> exp '>' exp                                 (50)
	exp -> exp '<=' exp                                (51)
	exp -> exp '>=' exp                                (52)
	exp -> exp ':' exp                                 (53)
	exp -> 'case' exp 'of' branches 'end'              (54)
	exp -> 'let' decls 'in' exp                        (55)
	exp -> 'let\'' pat '=' exp 'in' exp                (56)
	exp -> 'if' exp 'then' exp 'else' exp              (57)
	exp -> 'fix' '{' exp '}'                           (58)
	exp -> 'fresh' '{' VARID ':' btype '}' 'in' exp    (59)
	exp -> exp '!' VARID                               (60)
	exp -> 'trace' VARID '(' exp ')'                   (61)
	exp -> 'collect' '{' exp '}' exp                   (62)
	sexps -> sexp                                      (63)
	sexps -> sexp sexps                                (64)
	exps ->                                            (65)
	exps -> cexps                                      (66)
	cexps -> exp                                       (67)
	cexps -> ccexps                                    (68)
	ccexps -> exp ',' cexps                            (69)
	branches -> branch                                 (70)
	branches -> branch branches                        (71)
	branch -> '|' pat '->' exp                         (72)
	branch -> '|' VARID '%' pat '->' exp               (73)
	branch -> '|' INT '%' pat '->' exp                 (74)
	pat -> ppat                                        (75)
	pat -> CONID ppats                                 (76)
	pat -> pat ':' pat                                 (77)
	ppat -> '_'                                        (78)
	ppat -> VARID                                      (79)
	ppat -> CONID                                      (80)
	ppat -> '()'                                       (81)
	ppat -> '(' pat ')'                                (82)
	ppat -> '(' ccpats ')'                             (83)
	ppat -> '[' ']'                                    (84)
	ppat -> '[' cpats ']'                              (85)
	ppats -> ppat                                      (86)
	ppats -> ppat ppats                                (87)
	cpats -> pat                                       (88)
	cpats -> ccpats                                    (89)
	ccpats -> pat ',' cpats                            (90)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'='            { L _ TAssign }
	INT            { L _ (TInt _) }
	VARID          { L _ (TVar _) }
	CONID          { L _ (TCon _) }
	'()'           { L _ TUnit }
	'('            { L _ TLParen }
	')'            { L _ TRParen }
	'['            { L _ TLBracket }
	']'            { L _ TRBracket }
	'{'            { L _ TLCurBracket }
	'}'            { L _ TRCurBracket }
	'!'            { L _ TBang }
	'case'         { L _ TCase }
	'of'           { L _ TOf }
	'end'          { L _ TEnd }
	'let'          { L _ TLet }
	'let\''        { L _ TLetPrime }
	'in'           { L _ TIn }
	'if'           { L _ TIf }
	'then'         { L _ TThen }
	'else'         { L _ TElse }
	'data'         { L _ TData }
	'sig'          { L _ TSig }
	'fun'          { L _ TFun }
	'trace'        { L _ TTRACE }
	'fix'          { L _ TFix }
	'fresh'        { L _ TFresh }
	'collect'      { L _ TCollect }
	'_'            { L _ TUnd }
	'::'           { L _ TCons }
	':'            { L _ TColon }
	','            { L _ TComma }
	'not'          { L _ TNot }
	'+'            { L _ TPlus }
	'-'            { L _ TMinus }
	'*'            { L _ TTimes }
	'/'            { L _ TDiv }
	'%'            { L _ TPercent }
	'&&'           { L _ TLAnd }
	'||'           { L _ TLOr }
	'=='           { L _ TEq }
	'/='           { L _ TNe }
	'<'            { L _ TLt }
	'>'            { L _ TGt }
	'<='           { L _ TLe }
	'>='           { L _ TGe }
	'->'           { L _ TArrow }
	'|'            { L _ TBar }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	%start_typeParser rule  1
	program         rule  2
	decls           rules 3, 4, 5, 6
	sigDecl         rule  7
	dataDecl        rule  8
	constrs         rules 9, 10
	constr          rule  11
	btype           rule  12
	btype1          rules 13, 14
	atype           rules 15, 16, 17, 18, 19
	gtycon          rule  20
	types           rules 21, 22
	type            rules 23, 24
	funDecl         rule  25
	vars            rules 26, 27
	sexp            rules 28, 29, 30, 31, 32, 33, 34
	exp             rules 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62
	sexps           rules 63, 64
	exps            rules 65, 66
	cexps           rules 67, 68
	ccexps          rule  69
	branches        rules 70, 71
	branch          rules 72, 73, 74
	pat             rules 75, 76, 77
	ppat            rules 78, 79, 80, 81, 82, 83, 84, 85
	ppats           rules 86, 87
	cpats           rules 88, 89
	ccpats          rule  90

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'data'         shift, and enter state 4
	'sig'          shift, and enter state 5
	'fun'          shift, and enter state 6
	%eof           reduce using rule 3

	program        goto state 16
	decls          goto state 3

State 1


	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	'['            shift, and enter state 15

	btype          goto state 7
	btype1         goto state 8
	atype          goto state 9
	gtycon         goto state 10
	type           goto state 11

State 2


	'data'         shift, and enter state 4
	'sig'          shift, and enter state 5
	'fun'          shift, and enter state 6

	decls          goto state 3

State 3

	program -> decls .                                  (rule 2)

	%eof           reduce using rule 2


State 4

	decls -> 'data' . dataDecl decls                    (rule 4)

	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	'['            shift, and enter state 15

	dataDecl       goto state 26
	btype          goto state 7
	btype1         goto state 8
	atype          goto state 9
	gtycon         goto state 10
	type           goto state 27

State 5

	decls -> 'sig' . sigDecl decls                      (rule 6)

	VARID          shift, and enter state 25

	sigDecl        goto state 24

State 6

	decls -> 'fun' . funDecl decls                      (rule 5)

	VARID          shift, and enter state 23

	funDecl        goto state 22

State 7

	type -> btype . '->' type                           (rule 23)
	type -> btype .                                     (rule 24)

	'='            reduce using rule 24
	')'            reduce using rule 24
	']'            reduce using rule 24
	'in'           reduce using rule 24
	'data'         reduce using rule 24
	'sig'          reduce using rule 24
	'fun'          reduce using rule 24
	','            reduce using rule 24
	'->'           shift, and enter state 21
	%eof           reduce using rule 24


State 8

	btype -> btype1 .                                   (rule 12)
	btype1 -> btype1 . atype                            (rule 13)

	'='            reduce using rule 12
	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	')'            reduce using rule 12
	'['            shift, and enter state 15
	']'            reduce using rule 12
	'}'            reduce using rule 12
	'in'           reduce using rule 12
	'data'         reduce using rule 12
	'sig'          reduce using rule 12
	'fun'          reduce using rule 12
	','            reduce using rule 12
	'->'           reduce using rule 12
	'|'            reduce using rule 12
	%eof           reduce using rule 12

	atype          goto state 20
	gtycon         goto state 10

State 9

	btype1 -> atype .                                   (rule 14)

	'='            reduce using rule 14
	VARID          reduce using rule 14
	CONID          reduce using rule 14
	'('            reduce using rule 14
	')'            reduce using rule 14
	'['            reduce using rule 14
	']'            reduce using rule 14
	'}'            reduce using rule 14
	'in'           reduce using rule 14
	'data'         reduce using rule 14
	'sig'          reduce using rule 14
	'fun'          reduce using rule 14
	','            reduce using rule 14
	'->'           reduce using rule 14
	'|'            reduce using rule 14
	%eof           reduce using rule 14


State 10

	atype -> gtycon .                                   (rule 15)

	'='            reduce using rule 15
	VARID          reduce using rule 15
	CONID          reduce using rule 15
	'('            reduce using rule 15
	')'            reduce using rule 15
	'['            reduce using rule 15
	']'            reduce using rule 15
	'}'            reduce using rule 15
	'in'           reduce using rule 15
	'data'         reduce using rule 15
	'sig'          reduce using rule 15
	'fun'          reduce using rule 15
	','            reduce using rule 15
	'->'           reduce using rule 15
	'|'            reduce using rule 15
	%eof           reduce using rule 15


State 11

	%start_typeParser -> type .                         (rule 1)

	%eof           accept


State 12

	atype -> VARID .                                    (rule 16)

	'='            reduce using rule 16
	VARID          reduce using rule 16
	CONID          reduce using rule 16
	'('            reduce using rule 16
	')'            reduce using rule 16
	'['            reduce using rule 16
	']'            reduce using rule 16
	'}'            reduce using rule 16
	'in'           reduce using rule 16
	'data'         reduce using rule 16
	'sig'          reduce using rule 16
	'fun'          reduce using rule 16
	','            reduce using rule 16
	'->'           reduce using rule 16
	'|'            reduce using rule 16
	%eof           reduce using rule 16


State 13

	gtycon -> CONID .                                   (rule 20)

	'='            reduce using rule 20
	VARID          reduce using rule 20
	CONID          reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	'['            reduce using rule 20
	']'            reduce using rule 20
	'}'            reduce using rule 20
	'in'           reduce using rule 20
	'data'         reduce using rule 20
	'sig'          reduce using rule 20
	'fun'          reduce using rule 20
	','            reduce using rule 20
	'->'           reduce using rule 20
	'|'            reduce using rule 20
	%eof           reduce using rule 20


State 14

	atype -> '(' . types ')'                            (rule 17)
	atype -> '(' . type ')'                             (rule 19)

	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	'['            shift, and enter state 15

	btype          goto state 7
	btype1         goto state 8
	atype          goto state 9
	gtycon         goto state 10
	types          goto state 18
	type           goto state 19

State 15

	atype -> '[' . type ']'                             (rule 18)

	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	'['            shift, and enter state 15

	btype          goto state 7
	btype1         goto state 8
	atype          goto state 9
	gtycon         goto state 10
	type           goto state 17

State 16

	%start_parser -> program .                          (rule 0)

	%eof           accept


State 17

	atype -> '[' type . ']'                             (rule 18)

	']'            shift, and enter state 40


State 18

	atype -> '(' types . ')'                            (rule 17)
	types -> types . ',' type                           (rule 21)

	')'            shift, and enter state 38
	','            shift, and enter state 39


State 19

	atype -> '(' type . ')'                             (rule 19)
	types -> type . ',' type                            (rule 22)

	')'            shift, and enter state 36
	','            shift, and enter state 37


State 20

	btype1 -> btype1 atype .                            (rule 13)

	'='            reduce using rule 13
	VARID          reduce using rule 13
	CONID          reduce using rule 13
	'('            reduce using rule 13
	')'            reduce using rule 13
	'['            reduce using rule 13
	']'            reduce using rule 13
	'}'            reduce using rule 13
	'in'           reduce using rule 13
	'data'         reduce using rule 13
	'sig'          reduce using rule 13
	'fun'          reduce using rule 13
	','            reduce using rule 13
	'->'           reduce using rule 13
	'|'            reduce using rule 13
	%eof           reduce using rule 13


State 21

	type -> btype '->' . type                           (rule 23)

	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	'['            shift, and enter state 15

	btype          goto state 7
	btype1         goto state 8
	atype          goto state 9
	gtycon         goto state 10
	type           goto state 35

State 22

	decls -> 'fun' funDecl . decls                      (rule 5)

	'in'           reduce using rule 3
	'data'         shift, and enter state 4
	'sig'          shift, and enter state 5
	'fun'          shift, and enter state 6
	%eof           reduce using rule 3

	decls          goto state 34

State 23

	funDecl -> VARID . vars '=' exp                     (rule 25)

	VARID          shift, and enter state 33

	vars           goto state 32

State 24

	decls -> 'sig' sigDecl . decls                      (rule 6)

	'in'           reduce using rule 3
	'data'         shift, and enter state 4
	'sig'          shift, and enter state 5
	'fun'          shift, and enter state 6
	%eof           reduce using rule 3

	decls          goto state 31

State 25

	sigDecl -> VARID . '::' type                        (rule 7)

	'::'           shift, and enter state 30


State 26

	decls -> 'data' dataDecl . decls                    (rule 4)

	'in'           reduce using rule 3
	'data'         shift, and enter state 4
	'sig'          shift, and enter state 5
	'fun'          shift, and enter state 6
	%eof           reduce using rule 3

	decls          goto state 29

State 27

	dataDecl -> type . '=' constrs                      (rule 8)

	'='            shift, and enter state 28


State 28

	dataDecl -> type '=' . constrs                      (rule 8)

	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	'['            shift, and enter state 15

	constrs        goto state 46
	constr         goto state 47
	btype          goto state 48
	btype1         goto state 8
	atype          goto state 9
	gtycon         goto state 10

State 29

	decls -> 'data' dataDecl decls .                    (rule 4)

	'in'           reduce using rule 4
	%eof           reduce using rule 4


State 30

	sigDecl -> VARID '::' . type                        (rule 7)

	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	'['            shift, and enter state 15

	btype          goto state 7
	btype1         goto state 8
	atype          goto state 9
	gtycon         goto state 10
	type           goto state 45

State 31

	decls -> 'sig' sigDecl decls .                      (rule 6)

	'in'           reduce using rule 6
	%eof           reduce using rule 6


State 32

	funDecl -> VARID vars . '=' exp                     (rule 25)

	'='            shift, and enter state 44


State 33

	vars -> VARID .                                     (rule 26)
	vars -> VARID . vars                                (rule 27)

	'='            reduce using rule 26
	VARID          shift, and enter state 33

	vars           goto state 43

State 34

	decls -> 'fun' funDecl decls .                      (rule 5)

	'in'           reduce using rule 5
	%eof           reduce using rule 5


State 35

	type -> btype '->' type .                           (rule 23)

	'='            reduce using rule 23
	')'            reduce using rule 23
	']'            reduce using rule 23
	'in'           reduce using rule 23
	'data'         reduce using rule 23
	'sig'          reduce using rule 23
	'fun'          reduce using rule 23
	','            reduce using rule 23
	%eof           reduce using rule 23


State 36

	atype -> '(' type ')' .                             (rule 19)

	'='            reduce using rule 19
	VARID          reduce using rule 19
	CONID          reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	'['            reduce using rule 19
	']'            reduce using rule 19
	'}'            reduce using rule 19
	'in'           reduce using rule 19
	'data'         reduce using rule 19
	'sig'          reduce using rule 19
	'fun'          reduce using rule 19
	','            reduce using rule 19
	'->'           reduce using rule 19
	'|'            reduce using rule 19
	%eof           reduce using rule 19


State 37

	types -> type ',' . type                            (rule 22)

	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	'['            shift, and enter state 15

	btype          goto state 7
	btype1         goto state 8
	atype          goto state 9
	gtycon         goto state 10
	type           goto state 42

State 38

	atype -> '(' types ')' .                            (rule 17)

	'='            reduce using rule 17
	VARID          reduce using rule 17
	CONID          reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	'['            reduce using rule 17
	']'            reduce using rule 17
	'}'            reduce using rule 17
	'in'           reduce using rule 17
	'data'         reduce using rule 17
	'sig'          reduce using rule 17
	'fun'          reduce using rule 17
	','            reduce using rule 17
	'->'           reduce using rule 17
	'|'            reduce using rule 17
	%eof           reduce using rule 17


State 39

	types -> types ',' . type                           (rule 21)

	VARID          shift, and enter state 12
	CONID          shift, and enter state 13
	'('            shift, and enter state 14
	'['            shift, and enter state 15

	btype          goto state 7
	btype1         goto state 8
	atype          goto state 9
	gtycon         goto state 10
	type           goto state 41

State 40

	atype -> '[' type ']' .                             (rule 18)

	'='            reduce using rule 18
	VARID          reduce using rule 18
	CONID          reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	'['            reduce using rule 18
	']'            reduce using rule 18
	'}'            reduce using rule 18
	'in'           reduce using rule 18
	'data'         reduce using rule 18
	'sig'          reduce using rule 18
	'fun'          reduce using rule 18
	','            reduce using rule 18
	'->'           reduce using rule 18
	'|'            reduce using rule 18
	%eof           reduce using rule 18


State 41

	types -> types ',' type .                           (rule 21)

	')'            reduce using rule 21
	','            reduce using rule 21


State 42

	types -> type ',' type .                            (rule 22)

	')'            reduce using rule 22
	','            reduce using rule 22


State 43

	vars -> VARID vars .                                (rule 27)

	'='            reduce using rule 27


State 44

	funDecl -> VARID vars '=' . exp                     (rule 25)
